fixed a small bug with Z-index CSS

--- a/static/base.css
+++ b/static/base.css
@@ -4,7 +4,6 @@
     top: 0; 
     background-color: honeydew;
     margin: -8px;
-    z-index:-1
 }
 
 .subtitle {
